<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/template">
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:id="@+id/start_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/home_start_fr_to_en_content"
                android:onClick="startTrainingFrToEn" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/home_start_en_to_fr_content"
                android:onClick="startTrainingEnToFr" />
        </LinearLayout>
        <TextView 
            android:id="@+id/home_text1"
            android:layout_below="@id/start_buttons"
            android:text="@string/home_text1_content"
            style="@style/home_text" />
        <TextView 
            android:id="@+id/home_text2"
            android:layout_below="@id/home_text1"
            android:text="@string/home_text2_content"
            style="@style/home_text" />
        <TextView 
            android:id="@+id/home_text3"
            android:layout_below="@id/home_text2"
            android:text="@string/home_text3_content"
            style="@style/home_text" />
        <TextView 
            android:layout_below="@id/home_text3"
            android:text="@string/home_text4_content"
            style="@style/home_text" />
    </RelativeLayout>
</ScrollView>